test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_with_usage.rs
use clapi::macros::*;

#[command(with_usage=123)]
fn app(){}

fn main(){}